# masterserv-rs

./: masterserv.code-workspace
doc/: arc.drawio  devlog.md
dummy-game/: Cargo.toml  index.html
dummy-game/public/: index.html
dummy-game/src/: hosted.rs  lib.rs  main.rs
dummy-game/src/client/: client.rs  mod.rs
dummy-game/src/client/platform/: canvas.rs  mod.rs  web_socket.rs
dummy-game/src/shared/: state.rs
masterserv/: Cargo.toml
masterserv-server/: Cargo.toml
masterserv-server/src/: host_handle.rs  host_msg.rs  lib.rs  main.rs  server.rs
masterserv-server/src/bus/: events.rs  mod.rs
masterserv-server/src/host/: handle.rs  mod.rs
masterserv-server/src/host_manager/: host_handle.rs  host_manager_msg.rs  mod.rs  msg.rs
masterserv-server/src/host_manager/host/: handle.rs  mod.rs
masterserv-server/src/host_server/: mod.rs  msg.rs
masterserv-server/src/host_server/host/: mod.rs  msg.rs
masterserv-server/src/web_server/: mod.rs
masterserv-server/src/ws_server/: mod.rs  msg.rs
masterserv-testbench/: Cargo.toml
masterserv-testbench/src/: main.rs
masterserv/src/: client.rs  dummy_game.rs  game.rs  host.rs  hosted_game.rs  lib.rs  main.rs  messages.rs  player.rs  protocols.rs  socket.rs
testclient/: Cargo.toml
testclient/src/: main.rs
