[package]
name = "dummy-game"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
masterserv = {path = "../masterserv"}
wasm-bindgen = "0.2.78"
serde = {version = "1.0.130", features = ["derive"]}
wasm-logger = "0.2.0"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
masterserv-server = {path = "../masterserv-server"}
tokio = { version = "1", features = ["full"] }
