[package]
name = "dummy-game"
version = "0.1.0"
edition = "2018"


[lib]
name="dummy_game_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
masterserv = {path = "../masterserv"}
wasm-bindgen = "0.2.78"
serde = {version = "1.0.130", features = ["derive"]}
wasm-logger = "0.2.0"
env_logger = "0.8.4"
glam = "0.19.0"
generational-arena = { version = "0.2", features = ["serde"] }
rand = "0.8.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window'
]




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
masterserv-server = {path = "../masterserv-server"}
tokio = { version = "1", features = ["full"] }
