[package]
name = "masterserv-testbench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
masterserv-server = {path = "../masterserv-server"}
masterserv = {path = "../masterserv"}
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.4"