[package]
name = "masterserv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"]}
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
bincode = {version = "1.3.3"}